# flir

./: .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  triton_shared.cc
include/triton-shared/: CMakeLists.txt  mlir_compat.h
include/triton-shared/Analysis/: .MaskAnalysis.h.swp  MaskAnalysis.h
include/triton-shared/BubbleUpOperation/: BubbleUpOperation.h  Passes.h
include/triton-shared/Conversion/: CMakeLists.txt
include/triton-shared/Dialect/: CMakeLists.txt
include/triton-shared/DiscreteMaskAccessConversion/: DiscreteMaskAccessConversionPass.h  Passes.h  Passes.td
include/triton-shared/TritonLinearize/: CMakeLists.txt  Passes.h  PtrAnalysis.h
include/triton-shared/TritonToAnnotation/: Passes.h  TritonToAnnotation.h
include/triton-shared/TritonToHFusion/: Passes.h  TritonToHFusion.h
include/triton-shared/TritonToHIVM/: Passes.h
include/triton-shared/TritonToLLVM/: Passes.h
include/triton-shared/TritonToLinalgIncubated/: ArgMinMaxConverter.h  BlockPtrAnalysis.h  CMakeLists.txt  ConversionPatterns.h  DescriptorConverter.h  FunctionConverter.h  HoistBroadcast.h  LoadStoreConverter.h  MaskAnalysis.h  Passes.h  Passes.td  TritonOpConverter.h  TritonToLinalgIncubatedPass.h  TritonToLinalgPass.h  UseAnalysis.h
include/triton-shared/TritonToUnstructureIncubated/: BubbleUpOperation.h  CMakeLists.txt  Passes.h  Passes.td  UnstructureConversionPass.h
include/triton-shared/UtilsIncubated/: InterleaveOptimization.h  Utils.h
lib/: CMakeLists.txt
lib/Analysis/: MaskAnalysis.cpp
lib/AnalysisStructured/: PtrAnalysis.cpp
lib/BubbleUpOperation/: BubbleUpOperation.cpp  CMakeLists.txt
lib/Conversion/: CMakeLists.txt
lib/Conversion/BubbleUpOperation/: BubbleUpOperation.cpp
lib/Conversion/DiscreteMaskAccessConversion/: DiscreteMaskAccessConversionPass.cpp
lib/Dialect/: CMakeLists.txt
lib/DiscreteMaskAccessConversion/: DiscreteMaskAccessConversionPass.cpp
lib/TritonLinearize/: MaskAnalysis.cpp  OpFoldResultUtils.cpp  PtrAnalysis.cpp  TritonLinearize.cpp  TritonLinearizePass.cpp
lib/TritonToAnnotation/: TritonToAnnotation.cpp
lib/TritonToHFusion/: TritonToHFusion.cpp
lib/TritonToHIVM/: TritonToHIVM.cpp
lib/TritonToLLVM/: TritonToLLVM.cpp
lib/TritonToLinalgIncubated/: .LoadStoreConverter.cpp.swp  ArgMinMaxConverter.cpp  BlockPtrAnalysis.cpp  CMakeLists.txt  DescriptorConverter.cpp  FunctionConverter.cpp  HoistBroadcast.cpp  LoadStoreConverter.cpp  MaskAnalysis.cpp  TritonOpConverter.cpp  TritonToLinalgIncubatedPass.cpp  UseAnalysis.cpp
lib/TritonToUnstructureIncubated/: BubbleUpOperation.cpp  CMakeLists.txt  OffsetAnalysis.cpp  UnstructureConversionPass.cpp
lib/UtilsIncubated/: CMakeLists.txt  InterleaveOptimization.cpp  Utils.cpp
(+106 files in other folders)
