add_subdirectory(Analysis)
add_subdirectory(AnalysisStructured)
add_subdirectory(Conversion)
add_subdirectory(Dialect)
add_subdirectory(Utils)
add_subdirectory(TritonToAnnotation)
add_subdirectory(TritonToHIVM)
add_subdirectory(TritonToHFusion)
#add_subdirectory(TritonToLinalg)
add_subdirectory(TritonToLLVM)
add_subdirectory(TritonToLinalgIncubated)
add_subdirectory(DiscreteMaskAccessConversion)
add_subdirectory(TritonToUnstructureIncubated)
#add_subdirectory(Dialect)
add_subdirectory(TritonLinearize)
add_subdirectory(UtilsIncubated)
add_subdirectory(BubbleUpOperation)

