add_subdirectory(Analysis)
add_subdirectory(AnalysisStructured)
add_subdirectory(Conversion)
add_subdirectory(Dialect)
add_subdirectory(Utils)
if (FLIR_BUILD_INCUBATED)
  add_subdirectory(TritonToAnnotation)
  #add_subdirectory(TritonToLinalg)
  add_subdirectory(TritonToLinalgIncubated)
  add_subdirectory(DiscreteMaskAccessConversion)
  add_subdirectory(TritonToUnstructureIncubated)
  #add_subdirectory(Dialect)
  add_subdirectory(TritonLinearize)
  add_subdirectory(UtilsIncubated)
  add_subdirectory(BubbleUpOperation)
endif()
