add_subdirectory(Conversion)
add_subdirectory(Dialect)
add_subdirectory(TritonToAnnotation)
add_subdirectory(TritonToHIVM)
add_subdirectory(TritonToHFusion)
add_subdirectory(TritonToLinalgIncubated)
add_subdirectory(TritonToLLVM)
add_subdirectory(DiscreteMaskAccessConversion)
add_subdirectory(TritonToUnstructureIncubated)
#add_subdirectory(Dialect)
add_subdirectory(TritonLinearize)
